updated env file

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SESSION_SECRET=hbsdjhv
 PORT=4000
-MONGODB_URI
+MONGODB_URI=mongodb+srv://admin:Z0rr02021@cluster0.h1gdy.mongodb.net/cryptoDB?retryWrites=true&w=majority
